# YubaMeshApp

./: .gitignore  .gitmodules  CMakeLists.txt  PluginBackend.cpp  PluginBackend.h  README.md  SlicesCanvas.h  YubaMesh.pro  YubaMs.pro  glviewer.pro  mesh_serialization.md  texture.md  wireframe.md
app/: CMakeLists.txt  app.pro  gl4window.h  main.cpp  yuba.icns
app/qml/: main.qml  qml.qrc  qmldir
app/qml/styles/: Gradients.qml  HVButton.qml
plugins/glviewer/: CMakeLists.txt  SlicesCanvas.cpp  glviewer.pro  measurement.pro
plugins/glviewer/cpp/: FboNode.cpp  FboNode.h  glviewer_plugin.cpp
plugins/glviewer/cpp/bases/: GLMeshObject.cpp  GLMeshObject.h  IRenderScript.cpp  IRenderScript.h  ISingleton.inc  InteractiveObjectMesh.cpp  InteractiveObjectMesh.h  glviewerGlobal.inc  ipluginbackend.cpp  ipluginbackend.h
plugins/glviewer/cpp/controller/: CentralController.cpp  CentralController.h  GLMeshController.cpp  GLMeshController.h  InteractiveController.cpp  InteractiveController.h  (+7 more)
plugins/glviewer/glsl/: adjacency_tex.f.glsl  adjacency_tex.g.glsl  adjacency_tex.v.glsl  default.f.glsl  default.g.glsl  default.v.glsl  indices.f.glsl  picker.v.glsl  select_mask.g.glsl  select_mask.v.glsl  select_mask_adjacency.g.glsl  selection.f.glsl  tex_axes.f.glsl  tex_axes.v.glsl
plugins/glviewer/qml/: Tools.qml  Viewer.qml  qmldir
plugins/measurement/: CMakeLists.txt  PluginBackend.cpp  PluginBackend.h  SliceRender.cpp  SliceRender.h  SlicesCanvas.h  measurement.pro  measurement_plugin.cpp  measurement_plugin.h
plugins/measurement/algorithm/: MeshProcessing.cpp  MeshProcessing.h
plugins/measurement/qml/: ToolLists.xml  ToolX.qml  Tools.qml  qmldir
qml/: qmldir  (+2 more)
(+181 files in other folders)
